--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -91,23 +91,6 @@ jobs:
           --username $ARGOCD_USERNAME \
           --password $ARGOCD_PASSWORD \
           --insecure
-
-    # Add the cluster to ArgoCD if not exists
-    - name: Add Cluster to ArgoCD
-      run: |
-        argocd login $ARGOCD_SERVER:$ARGOCD_PORT \
-          --username $ARGOCD_USERNAME \
-          --password $ARGOCD_PASSWORD \
-          --insecure
-        CLUSTER_NAME=$ENV_NAME-cluster
-        CONTEXT=$(kubectl config current-context)
-        EXISTS=$(argocd --server $ARGOCD_SERVER:$ARGOCD_PORT cluster get $CLUSTER_NAME || echo "not found")
-        if [[ "$EXISTS" == "not found" ]]; then
-          echo "Cluster $CLUSTER_NAME not found. Adding it..."
-          argocd cluster add $CONTEXT --name $CLUSTER_NAME --yes
-        else
-          echo "Cluster $CLUSTER_NAME already exists."
-        fi
     
     # Create Additional Admin User ConfigMap
     - name: Create Admin User ConfigMap
@@ -170,3 +153,17 @@ jobs:
           --password ${{ secrets.ARGOCD_MY_ADMIN_PASSWORD }} \
           --insecure
         echo "New admin user login successful."
+
+    # Add the cluster to ArgoCD if not exists
+    - name: Add Cluster to ArgoCD
+      run: |
+        CLUSTER_NAME=$ENV_NAME-cluster
+        CONTEXT=$(kubectl config current-context)
+        EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
+        if [[ "$EXISTS" == "not found" ]]; then
+          echo "Cluster $CLUSTER_NAME not found. Adding it..."
+          argocd cluster add $CONTEXT --name $CLUSTER_NAME --yes
+        else
+          echo "Cluster $CLUSTER_NAME already exists."
+        fi
+        #--server $ARGOCD_SERVER:$ARGOCD_PORT
