--- a/clusters/prod/hosts.yml
+++ b/clusters/prod/hosts.yml
@@ -18,6 +18,7 @@ all:
       hosts:
         rocky9-prod-node1:
         rocky9-prod-node2:
+        rocky9-prod-node3:
             
     kube_node:
       hosts:
