--- a/clusters/prod/hosts.yml
+++ b/clusters/prod/hosts.yml
@@ -33,6 +33,9 @@ all:
         rocky9-prod-node3:
             
     k8s_cluster:
+      vars:
+        supplementary_addresses_in_ssl_keys:
+          - prod-cluster.jjland.local
       children:
         kube_control_plane:
         kube_node:
