--- a/clusters/prod/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/clusters/prod/group_vars/k8s_cluster/k8s-cluster.yml
@@ -119,9 +119,9 @@ kube_network_node_prefix_ipv6: 120
 # The port the API Server will be listening on.
 kube_apiserver_ip: "{{ kube_service_addresses | ansible.utils.ipaddr('net') | ansible.utils.ipaddr(1) | ansible.utils.ipaddr('address') }}"
 kube_apiserver_port: 6443  # (https)
-#kube_apiserver_cert_extra_sans:
-supplementary_addresses_in_ssl_keys:
-  - prod-cluster.jjland.local
+# kube_apiserver_cert_extra_sans:
+# supplementary_addresses_in_ssl_keys:
+#   - prod-cluster.jjland.local
 
 # Kube-proxy proxyMode configuration.
 # Can be ipvs, iptables
