--- a/clusters/prod/hosts.yml
+++ b/clusters/prod/hosts.yml
@@ -34,8 +34,7 @@ all:
             
     k8s_cluster:
       vars:
-        supplementary_addresses_in_ssl_keys:
-          - prod-cluster.jjland.local
+        supplementary_addresses_in_ssl_keys: ['prod-cluster.jjland.local']
       children:
         kube_control_plane:
         kube_node:
