--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -159,10 +159,10 @@ jobs:
       run: |
         CLUSTER_NAME=$ENV_NAME-cluster
         CONTEXT=$(kubectl config current-context)
-        EXISTS=$(argocd --server $ARGOCD_SERVER:$ARGOCD_PORT cluster get $CLUSTER_NAME || echo "not found")
+        EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
         if [[ "$EXISTS" == "not found" ]]; then
           echo "Cluster $CLUSTER_NAME not found. Adding it..."
-          argocd --server $ARGOCD_SERVER:$ARGOCD_PORT cluster add $CONTEXT --name $CLUSTER_NAME --yes
+          argocd cluster add $CONTEXT --name $CLUSTER_NAME --yes
         else
           echo "Cluster $CLUSTER_NAME already exists."
         fi
