--- a/apps/traefik/values-lab.yml
+++ b/apps/traefik/values-lab.yml
@@ -1,36 +1,30 @@
-ports:
-  web:
-    port: 80
-    expose: true
-    exposedPort: 80
-    protocol: TCP
-  websecure:
-    port: 443
-    expose: true
-    exposedPort: 443
-    protocol: TCP
-  traefik:
-    port: 9000
-    expose: true
-    exposedPort: 9000
-    protocol: TCP
-
+# Create an IngressRoute for the dashboard
 ingressRoute:
   dashboard:
     enabled: true
+    # Custom match rule with host domain
+    matchRule: Host(`traefik-dashboard.example.com`)
+    entryPoints: ["websecure"]
+    # Add custom middlewares : authentication and redirection
+    middlewares:
+      - name: traefik-dashboard-auth
 
-providers:
-  kubernetesCRD: {}
-  kubernetesIngress: {}
+# Create the custom middlewares used by the IngressRoute dashboard (can also be created in another way).
+# /!\ Yes, you need to replace "changeme" password with a better one. /!\
+extraObjects:
+  - apiVersion: v1
+    kind: Secret
+    metadata:
+      name: traefik-dashboard-auth-secret
+    type: kubernetes.io/basic-auth
+    stringData:
+      username: admin
+      password: changeme
 
-additionalArguments:
-  - "--api.insecure=true" # Enables the dashboard
-  - "--api.dashboard=true"
-
-service:
-  type: LoadBalancer
-  loadBalancerIP: 172.16.99.30 # External IP from MetalLB
-
-logs:
-  general:
-    level: INFO
+  - apiVersion: traefik.io/v1alpha1
+    kind: Middleware
+    metadata:
+      name: traefik-dashboard-auth
+    spec:
+      basicAuth:
+        secret: traefik-dashboard-auth-secret
