--- a/apps/traefik/values-lab.yml
+++ b/apps/traefik/values-lab.yml
@@ -1,30 +1,37 @@
-# Create an IngressRoute for the dashboard
+# traefik-values.yml
+ports:
+  web:
+    expose: true
+    port: 80
+    exposedPort: 80
+    protocol: TCP
+  websecure:
+    expose: true
+    port: 443
+    exposedPort: 443
+    protocol: TCP
+  traefik:
+    expose: true
+    port: 9000
+    exposedPort: 9000
+    protocol: TCP
+
 ingressRoute:
   dashboard:
     enabled: true
-#     # Custom match rule with host domain
-#     matchRule: Host(`traefik-dashboard.example.com`)
-#     entryPoints: ["websecure"]
-#     # Add custom middlewares : authentication and redirection
-#     middlewares:
-#       - name: traefik-dashboard-auth
 
-# # Create the custom middlewares used by the IngressRoute dashboard (can also be created in another way).
-# # /!\ Yes, you need to replace "changeme" password with a better one. /!\
-# extraObjects:
-#   - apiVersion: v1
-#     kind: Secret
-#     metadata:
-#       name: traefik-dashboard-auth-secret
-#     type: kubernetes.io/basic-auth
-#     stringData:
-#       username: admin
-#       password: changeme
+providers:
+  kubernetesCRD: {}
+  kubernetesIngress: {}
 
-#   - apiVersion: traefik.io/v1alpha1
-#     kind: Middleware
-#     metadata:
-#       name: traefik-dashboard-auth
-#     spec:
-#       basicAuth:
-#         secret: traefik-dashboard-auth-secret
+additionalArguments:
+  - "--api.insecure=true" # Enables the dashboard
+  - "--api.dashboard=true"
+
+service:
+  type: LoadBalancer
+  loadBalancerIP: 192.168.101.160 # External IP from MetalLB
+
+logs:
+  general:
+    level: INFO
