--- a/apps/traefik/values-lab.yml
+++ b/apps/traefik/values-lab.yml
@@ -20,8 +20,8 @@ ingressRoute:
   dashboard:
     enabled: true
     # Custom match rule with host domain
-    #matchRule: Host(`traefik-dashboard.example.com`)
-    entryPoints: ["websecure"]
+    matchRule: Host(`traefik-dashboard-lab.jjland.local`)
+    entryPoints: ["web", "websecure"]
     # Add custom middlewares : authentication and redirection
     middlewares:
       - name: traefik-dashboard-auth
