--- a/argocd-app-manifests/external-secrets-dev.yml
+++ b/argocd-app-manifests/external-secrets-dev.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metallb-system
+  name: external-secrets-lab
   namespace: argocd
 spec:
   project: ahead-labs
@@ -10,8 +10,8 @@ spec:
     targetRevision: 0.11.0
     chart: external-secrets
   destination:
-    server: https://lib-nautobot-04.lab.aheadaviation.com:6443
-    namespace: external-secrets-dev
+    server: https://172.16.99.25:6443
+    namespace: external-secrets-lab
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
