--- a/argocd-app-manifests/external-secrets-dev.yml
+++ b/argocd-app-manifests/external-secrets-dev.yml
@@ -4,7 +4,7 @@ metadata:
   name: external-secrets-lab
   namespace: argocd
 spec:
-  project: ahead-labs
+  project: home-lab
   source:
     repoURL: https://charts.external-secrets.io
     targetRevision: 0.11.0
