--- a/apps/nautobot/overlays/test/external-secrets.yml
+++ b/apps/nautobot/overlays/test/external-secrets.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: nautobot-db-secrets
-  namespace: nautobot-test
+  namespace: nautobot-lab
 spec:
   refreshInterval: "1h" # Refresh every hour
   secretStoreRef:
