--- a/apps/hashicorp-vault/overlays/lab/svc-nodeport.yml
+++ b/apps/hashicorp-vault/overlays/lab/svc-nodeport.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hashicorp-vault-dev-ui
-  namespace: vault-lab
+  namespace: hashi-vault-lab
 spec:
   ports:
   - name: http
