--- a/apps/hashicorp-vault/overlays/lab/svc-nodeport.yml
+++ b/apps/hashicorp-vault/overlays/lab/svc-nodeport.yml
@@ -1,16 +1,16 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: hashicorp-vault-dev-ui
-  namespace: hashi-vault-lab
-spec:
-  ports:
-  - name: http
-    nodePort: 30820
-    port: 8200
-    protocol: TCP
-    targetPort: 8200
-  selector:
-    app.kubernetes.io/instance: hashicorp-vault-lab
-    app.kubernetes.io/name: vault
-  type: NodePort
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: hashicorp-vault-dev-ui
+#   namespace: hashi-vault-lab
+# spec:
+#   ports:
+#   - name: http
+#     nodePort: 30820
+#     port: 8200
+#     protocol: TCP
+#     targetPort: 8200
+#   selector:
+#     app.kubernetes.io/instance: hashicorp-vault-lab
+#     app.kubernetes.io/name: vault
+#   type: NodePort
