--- a/apps/nautobot/base/cluster-secret-store.yml
+++ b/apps/nautobot/base/cluster-secret-store.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: vault-backend
-  namespace: nautobot-test
+  namespace: nautobot-lab
 spec:
   provider:
     vault:
