--- a/apps/nautobot/base/cluster-secret-store.yml
+++ b/apps/nautobot/base/cluster-secret-store.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://hashicorp-vault-0.hashicorp-vault-internal.vault-test:8200"
+      server: "http://hashi-vault-lab-0.hashi-vault-lab-internal.hashi-vault-lab:8200"
       path: "secret"
       # Version is the Vault KV secret engine version.
       # This can be either "v1" or "v2", defaults to "v2"
