--- a/apps/nautobot/overlays/lab/external-secrets.yml
+++ b/apps/nautobot/overlays/lab/external-secrets.yml
@@ -15,12 +15,12 @@ spec:
     - secretKey: postgres-password       # Key for Postgres 'postgres' user in the K8s secret
       remoteRef:
         key: secret/data/nautobot-db-credentials    # Path in Vault (adjust based on your setup)
-        property: postgresql-pass      # Key in the Vault secret
+        property: postgres-pass      # Key in the Vault secret
 
     - secretKey: password   # Key for Postgres password in the K8s secret
       remoteRef:
         key: secret/data/nautobot-db-credentials
-        property: postgresql-pass
+        property: postgres-pass
 
     - secretKey: redis-password      # Key for Redis password
       remoteRef:
