--- a/apps/nautobot/values-lab.yml
+++ b/apps/nautobot/values-lab.yml
@@ -36,7 +36,7 @@ postgresql:
       accessModes: ['ReadWriteOnce']
   auth:
     #password: "nautobot-postgres-pass"
-    existingSecret: nautobot-db-secrets
+    existingSecret: nautobot-test-secrets
     #usernameKey: POSTGRES_USER
     #passwordKey: POSTGRES_PASSWORD
 
@@ -49,7 +49,7 @@ redis:
       accessModes: ['ReadWriteOnce']
   auth:
     enabled: true
-    existingSecret: nautobot-db-secrets
+    existingSecret: nautobot-test-secrets
     #usernameKey: REDIS_USER
     #passwordKey: REDIS_PASSWORD
     #password: "nautobot-redis-pass"
