--- a/apps/netbox/values-lab.yml
+++ b/apps/netbox/values-lab.yml
@@ -13,3 +13,11 @@ postgresql:
       size: "5Gi"
       storageClass: "rook-cephfs"
       accessModes: ['ReadWriteOnce']
+
+redis:
+  master:
+    persistence:
+      enabled: true
+      size: "1Gi"
+      storageClass: "rook-cephfs"
+      accessModes: ['ReadWriteOnce']
