--- a/apps/netbox/values-lab.yml
+++ b/apps/netbox/values-lab.yml
@@ -15,6 +15,7 @@ postgresql:
       accessModes: ['ReadWriteOnce']
 
 redis:
+  architecture: "standalone"
   master:
     persistence:
       enabled: true
