--- a/apps/netbox/values-lab.yml
+++ b/apps/netbox/values-lab.yml
@@ -1,5 +1,7 @@
 clusterDomain: jjland.local
 
+extraEnvVarsSecret: ["netbox-db-secrets"]
+
 persistence:
   enabled: true
   storageClass: "rook-cephfs"
