--- a/apps/netbox/values-lab.yml
+++ b/apps/netbox/values-lab.yml
@@ -15,6 +15,8 @@ postgresql:
       size: "5Gi"
       storageClass: "rook-cephfs"
       accessModes: ['ReadWriteOnce']
+  auth:
+    existingSecret: nautobot-test-secrets
 
 redis:
   architecture: "standalone"
