--- a/apps/netbox/values-lab.yml
+++ b/apps/netbox/values-lab.yml
@@ -1,6 +1,6 @@
 clusterDomain: jjland.local
 
-extraEnvVarsSecret: "netbox-db-secrets"
+extraEnvVarsSecret: "netbox-lab-secrets"
 
 persistence:
   enabled: true
