--- a/apps/librenms/values-lab.yml
+++ b/apps/librenms/values-lab.yml
@@ -7,7 +7,7 @@ rrdcached:
         # -- RRDCached journal PV size
         size: 1Gi
       rrdcached:
-        storageClassName: rook-cephfs
+        storageClass: "rook-cephfs"
         # -- RRDCached RRD storage PV size
         size: 2Gi
 mysql:
