--- a/apps/librenms/values-lab.yml
+++ b/apps/librenms/values-lab.yml
@@ -1,4 +1,5 @@
-rrdcached:
+librenms:
+  rrdcached:
     persistence:
       # -- RRDCached persistent volume enabled
       enabled: true
@@ -7,7 +8,7 @@ rrdcached:
         # -- RRDCached journal PV size
         size: 1Gi
       rrdcached:
-        storageClass: "rook-cephfs"
+        storageClassName: "rook-cephfs"
         # -- RRDCached RRD storage PV size
         size: 2Gi
 mysql:
