--- a/apps/traefik/values-prod.yml
+++ b/apps/traefik/values-prod.yml
@@ -2,7 +2,7 @@ ingressRoute:
   dashboard:
     enabled: true
     # Custom match rule with host domain
-    matchRule: Host(`traefik-dashboard-lab.jjland.local`)
+    matchRule: Host(`traefik-dashboard-prod.jjland.local`)
     entryPoints: ["web", "websecure"]
     # Add custom middlewares : authentication and redirection
     middlewares:
