--- a/.github/workflows/destroy-ceph-cluster.yml
+++ b/.github/workflows/destroy-ceph-cluster.yml
@@ -22,8 +22,8 @@ jobs:
     # Copy local folder to the cloned repository
     - name: Copy vars file to repo folder
       run: |
-        cp -f ./microceph/inventory-prod.yml ./ansible-role-microceph/inventory.yml
-        cp -f ./microceph/vars-prod.yml ./ansible-role-microceph/cluster-vars.yml
+        cp -f ./microceph/inventory-lab.yml ./ansible-role-microceph/inventory.yml
+        cp -f ./microceph/vars-lab.yml ./ansible-role-microceph/cluster-vars.yml
 
     - name: Set up Python virtual environment
       working-directory: ./ansible-role-microceph
