--- a/clusters/lab/hosts.yml
+++ b/clusters/lab/hosts.yml
@@ -17,6 +17,8 @@ all:
     kube_control_plane:
       hosts:
         rocky9-lab-node1:
+        rocky9-lab-node2:
+        rocky9-lab-node3:
             
     kube_node:
       hosts:
@@ -27,6 +29,8 @@ all:
     etcd:
       hosts:
         rocky9-lab-node1:
+        rocky9-lab-node2:
+        rocky9-lab-node3:
             
     k8s_cluster:
       children:
