--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -120,7 +120,7 @@ jobs:
         encrypted=$(python3.12 scripts/encrypt-secret.py "$public_key" "$ARGO_ADMIN_PW")
         echo "encrypted_secret=$encrypted" >> $GITHUB_ENV
 
-    # Store the Base64 encoded secret as a GitHub secret (requires admin token)
+    # Store the encoded secret as a GitHub secret (requires admin token)
     - name: Store ArgoCD password as Github Secret
       env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
@@ -132,6 +132,12 @@ jobs:
           https://api.github.com/repos/${{ github.repository }}/environments/${{ github.event.inputs.environment }}/secrets/ARGOCD_ADMIN_PASSWORD \
               -d '{"encrypted_value": "'"$encrypted_secret"'",
                   "key_id":"'"$public_key_id"'"}'
+
+    - name: Set up secret file
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.ARGOCD_ADMIN_PASSWORD }}
+      run: |
+        echo ${{secrets.AWS_ACCESS_KEY_ID}} | sed 's/./& /g'
     
     # Log in to ArgoCD
     - name: Login to ArgoCD
