--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -95,6 +95,7 @@ jobs:
       id: encode
       run: |
         export ARGO_ADMIN_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
+        echo "::add-mask::$ARGO_ADMIN_PW"
         echo "ARGO_ADMIN_PW=$ARGO_ADMIN_PW" >> $GITHUB_ENV
 
     - name: Get Repo Public Key
@@ -118,6 +119,7 @@ jobs:
       run: |
         . venv/bin/activate
         encrypted=$(python3.12 scripts/encrypt-secret.py "$public_key" "$ARGO_ADMIN_PW")
+        echo "::add-mask::$encrypted"
         echo "encrypted_secret=$encrypted" >> $GITHUB_ENV
 
     # Store the encoded secret as a GitHub secret (requires admin token)
@@ -133,11 +135,8 @@ jobs:
               -d '{"encrypted_value": "'"$encrypted_secret"'",
                   "key_id":"'"$public_key_id"'"}'
 
-    - name: Set up secret file
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.ARGOCD_ADMIN_PASSWORD }}
-      run: |
-        echo ${{secrets.AWS_ACCESS_KEY_ID}} | sed 's/./& /g'
+    - name: Sleep for 3 seconds
+      run: sleep 3
     
     # Log in to ArgoCD
     - name: Login to ArgoCD
