--- a/apps/rook-ceph/overlays/prod/ceph-storageclass-delete.yml
+++ b/apps/rook-ceph/overlays/prod/ceph-storageclass-delete.yml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: rook-cephfs
+  name: rook-cephfs-delete
 provisioner: rook-ceph.cephfs.csi.ceph.com # csi-provisioner-name
 parameters:
   # clusterID is the namespace where the rook cluster is running
