--- a/apps/rook-ceph/overlays/prod/kustomization.yml
+++ b/apps/rook-ceph/overlays/prod/kustomization.yml
@@ -2,4 +2,5 @@ resources:
   - ceph-cluster.yml
   - ingress-route-gui.yml
   - ceph-filesystem.yml
-  - ceph-storageclass.yml
+  - ceph-storageclass-delete.yml
+  - ceph-storageclass-retain.yml
