--- a/apps/hashicorp-vault/overlays/prod/ingress-route-gui.yml
+++ b/apps/hashicorp-vault/overlays/prod/ingress-route-gui.yml
@@ -12,7 +12,7 @@
      - match: Host(`vault.nerdy-apps-prod.jjland.local`)  # <-- Replace with your FQDN
        kind: Rule
        services:
-         - name: hashi-vault-lab-ui  # <-- Replace with your service name
+         - name: hashi-vault-prod-ui  # <-- Replace with your service name
            port: 8200
 # --> (Optional) Add certificate secret
 # tls:
