--- a/apps/nautobot/overlays/prod/external-secret-superuser.yml
+++ b/apps/nautobot/overlays/prod/external-secret-superuser.yml
@@ -1,25 +1,25 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: nautobot-xcel-superuser-secrets
-  namespace: nautobot-xcel
+  name: nautobot-prod-superuser-secrets
+  namespace: nautobot-prod
 spec:
   refreshInterval: "1h" # Refresh every hour
   secretStoreRef:
     name: vault-backend             # Name of the SecretStore resource
     kind: ClusterSecretStore                # SecretStore or ClusterSecretStore
   target:
-    name: nautobot-xcel-superuser-secrets           # Name of the Kubernetes secret to create
+    name: nautobot-prod-superuser-secrets           # Name of the Kubernetes secret to create
     creationPolicy: Owner            # Replace or update the secret
   
   data:
 
     - secretKey: password      # Key for Netbox Superuser password
       remoteRef:
-        key: secret/data/nautobot-admin-credentials
+        key: secret/data/nautobot-prod-superuser-credentials
         property: superuser-pass
 
     - secretKey: api_token     # Key for Netbox Superuser password
       remoteRef:
-        key: secret/data/nautobot-admin-credentials
+        key: secret/data/nautobot-prod-superuser-credentials
         property: superuser-api-token
