--- a/apps/ddclient/external-secret.yml
+++ b/apps/ddclient/external-secret.yml
@@ -15,3 +15,12 @@ spec:
     - secretKey: ddclient_password
       remoteRef:
         key: /path/to/ddclient-credentials/password
+    - secretKey: ddclient_login
+      remoteRef:
+        key: /path/to/ddclient-credentials/login
+    - secretKey: ddclient_domain
+      remoteRef:
+        key: /path/to/ddclient-credentials/domain
+    - secretKey: ddclient_protocol
+      remoteRef:
+        key: /path/to/ddclient-credentials/protocol
