--- a/apps/ddclient/external-secret.yml
+++ b/apps/ddclient/external-secret.yml
@@ -14,13 +14,20 @@ spec:
   data:
     - secretKey: ddclient_password
       remoteRef:
-        key: secret/data/ddclient-credentials/password
+        key: secret/data/ddclient-credentials
+        property: password
+        
     - secretKey: ddclient_login
       remoteRef:
-        key: secret/data//ddclient-credentials/login
+        key: secret/data/ddclient-credentials
+        property: login
+        
     - secretKey: ddclient_domain
       remoteRef:
-        key: secret/data/ddclient-credentials/domain
+        key: secret/data/ddclient-credentials
+        property: domain
+        
     - secretKey: ddclient_protocol
       remoteRef:
-        key: secret/data/ddclient-credentials/protocol
+        key: secret/data/ddclient-credentials
+        property: protocol
