--- a/apps/ddclient/deployment.yml
+++ b/apps/ddclient/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       initContainers:
         - name: generate-config
-          image: busybox:latest
+          image: alpine:latest
           env:
             - name: DDCLIENT_PASSWORD
               valueFrom:
@@ -37,7 +37,7 @@ spec:
                 secretKeyRef:
                   name: ddclient-secrets
                   key: ddclient_domain
-          command: [ "sh", "-c", "envsubst < /config-template/ddclient.conf.template > /config/ddclient/ddclient.conf" ]
+          command: [ "sh", "-c", "apk add --no-cache gettext && envsubst < /config-template/ddclient.conf.template > /config/ddclient/ddclient.conf" ]
           volumeMounts:
             - name: config-template
               mountPath: /config-template
