--- a/apps/ddclient/deployment.yml
+++ b/apps/ddclient/deployment.yml
@@ -37,19 +37,18 @@ spec:
                 secretKeyRef:
                   name: ddclient-secrets
                   key: ddclient_domain
-          command: [ "sh", "-c", "apk add --no-cache gettext && envsubst < /config-template/ddclient.conf.template > /config/ddclient/ddclient.conf" ]
+          command: [ "sh", "-c", "apk add --no-cache gettext && envsubst < /config-template/ddclient.conf.template > /config/ddclient.conf" ]
           volumeMounts:
             - name: config-template
               mountPath: /config-template
             - name: config
-              mountPath: /config/ddclient
+              mountPath: /config
       containers:
         - name: ddclient
           image: linuxserver/ddclient:latest
-          # The image expects its configuration at /config/ddclient/ddclient.conf
           volumeMounts:
             - name: config
-              mountPath: /config/ddclient
+              mountPath: /config
           env:
             - name: TZ
               value: "EST"
