--- a/apps/ddclient/ddclient-config-template.yml
+++ b/apps/ddclient/ddclient-config-template.yml
@@ -13,4 +13,6 @@ data:
     server=dynamicdns.park-your-domain.com
     login=$DDCLIENT_LOGIN
     password=$DDCLIENT_PASSWORD
-    @.$DDCLIENT_DOMAIN
+    @
+    
+    #.$DDCLIENT_DOMAIN
