--- a/apps/traefik/overlays/prod/cluster-issuer.yml
+++ b/apps/traefik/overlays/prod/cluster-issuer.yml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-namecheap
+  namespace: traefik-prod
 spec:
   acme:
     email: your-email@example.com
