--- a/apps/cert-manager/overlays/prod/cluster-issuer.yml
+++ b/apps/cert-manager/overlays/prod/cluster-issuer.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: cert-manager-prod
 spec:
   acme:
-    email: your-email@example.com
+    email: your-email@google.com
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt-namecheap-account-key
