--- a/apps/nautobot/overlays/prod/ingress-route.yml
+++ b/apps/nautobot/overlays/prod/ingress-route.yml
@@ -3,6 +3,9 @@
  apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
+   annotations:
+     # add an annotation indicating the issuer to use.
+     cert-manager.io/cluster-issuer: letsencrypt-namecheap
    name: nautobot-prod-ingressroute  # <-- Replace with your IngressRoute name
    namespace: nautobot-prod  # <-- Replace with your namespace
  spec:
@@ -16,6 +19,8 @@
          - name: nautobot-prod-default  # <-- Replace with your service name
            port: 80
 # --> (Optional) Add certificate secret
-# tls:
-#     secretName: your-certificate-secret
+tls:
+  - hosts:
+    - nautobot.nerdylyonsden.io
+    secretName: nautobot-prod-ingress-cert # < cert-manager will store the created certificate in this secret.
 # <--
