--- a/apps/traefik/overlays/prod/cluster-secret-store.yml
+++ b/apps/traefik/overlays/prod/cluster-secret-store.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: vault-backend-cert-manager
-  namespace: traefik-prod
+  #namespace: traefik-prod
 spec:
   provider:
     vault:
