--- a/apps/traefik/overlays/prod/external-secret.yml
+++ b/apps/traefik/overlays/prod/external-secret.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: cert-manager-prod-external-secret
-  namespace: traefik-prod
+  #namespace: traefik-prod
 spec:
   refreshInterval: "1h" # Refresh every hour
   secretStoreRef:
