--- a/apps/traefik/overlays/prod/nautobot-cert.yml
+++ b/apps/traefik/overlays/prod/nautobot-cert.yml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: nautobot-prod-cert
-  namespace: traefik-prod
+  #namespace: traefik-prod
 spec:
   secretName: nautobot-prod-cert-secret
   issuerRef:
