--- a/apps/cert-manager/overlays/prod/kustomization.yml
+++ b/apps/cert-manager/overlays/prod/kustomization.yml
@@ -1,2 +1,15 @@
-resources:
-  - rbac.yml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+namespace: cert-manager
+
+helmCharts:
+  - name: namecheap-webhook
+    # Path to the local Helm chart; adjust the relative path as needed.
+    chart: deploy/cert-manager-webhook-namecheap
+    # Optionally specify the version if it's defined in Chart.yaml. Omit if not needed.
+    # version: "0.1.0"
+    releaseName: namecheap-webhook
+
+#resources:
+#  - rbac.yml
