--- a/apps/traefik/overlays/prod/cert-stage.yml
+++ b/apps/traefik/overlays/prod/cert-stage.yml
@@ -4,7 +4,7 @@ metadata:
   name: wildcard-cert-stage
   namespace: traefik
 spec:
-  secretName: wildcard-cert-stage
+  secretName: nautobot-prod-cert-secret
   commonName: "*.nerdylyonsden.io"
   issuerRef:
     kind: ClusterIssuer
