--- a/apps/traefik/overlays/prod/kustomization.yml
+++ b/apps/traefik/overlays/prod/kustomization.yml
@@ -2,4 +2,5 @@ resources:
   - cluster-issuer.yml
   - cluster-secret-store.yml
   - external-secret.yml
-  - nautobot-cert.yml
+  #- nautobot-cert.yml
+  - cert-stage.yml
