--- a/apps/traefik/overlays/prod/kustomization.yml
+++ b/apps/traefik/overlays/prod/kustomization.yml
@@ -1,5 +1,5 @@
 resources:
-  - cluster-issuer.yml
+  #- cluster-issuer.yml
   - cluster-secret-store.yml
   - external-secret.yml
   #- nautobot-cert.yml
