--- a/apps/traefik/overlays/prod/external-secret.yml
+++ b/apps/traefik/overlays/prod/external-secret.yml
@@ -14,12 +14,12 @@ spec:
   
   data:
 
-    - secretKey: api-user      # Key for Netbox Superuser password
+    - secretKey: apiUser      # Key for Netbox Superuser password
       remoteRef:
         key: secret/data/namecheap-credentials
         property: api-user
 
-    - secretKey: api-token     # Key for Netbox Superuser password
+    - secretKey: apiKey     # Key for Netbox Superuser password
       remoteRef:
         key: secret/data/namecheap-credentials
         property: api-key
