--- a/apps/cert-manager/overlays/prod/kustomization.yml
+++ b/apps/cert-manager/overlays/prod/kustomization.yml
@@ -2,4 +2,4 @@ resources:
   - rbac.yml
   - cluster-secret-store.yml
   - external-secret.yml
-  - cert-stage.yml
+  - wildcard-certificate-prod.yml
