--- a/apps/cert-manager/overlays/prod/wildcard-certificate-prod.yml
+++ b/apps/cert-manager/overlays/prod/wildcard-certificate-prod.yml
@@ -10,3 +10,8 @@ spec:
     name: letsencrypt-prod
   dnsNames:
   - "*.nerdylyonsden.io"
+
+  secretTemplate:
+    annotations:
+      reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "nautobot-prod"  # Control destination namespaces
