--- a/apps/cert-manager/overlays/prod/wildcard-certificate-prod.yml
+++ b/apps/cert-manager/overlays/prod/wildcard-certificate-prod.yml
@@ -15,3 +15,5 @@ spec:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
       reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "nautobot-prod"  # Control destination namespaces
+      reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
+      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "nautobot-prod"
