--- a/argocd-app-manifests/prod/kube-vip-prod.yml
+++ b/argocd-app-manifests/prod/kube-vip-prod.yml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kube-vip-prod
+  name: kube-vip
   namespace: argocd
 spec:
-  project: ahead-labs
+  project: prod-home
 destination:
-  #server: https://lib-nautobot-04.lab.aheadaviation.com:6443
-  namespace: kube-vip-prod
+  server: https://prod-kube-vip.jjland.local:6443
+  namespace: kube-vip
 syncPolicy:
   syncOptions:
     - CreateNamespace=true
